[gd_scene load_steps=24 format=2]

[ext_resource path="res://scenes/gameplay/MainCamera.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/levels/seasonal tilesets/winter world/Background/3 - Big_mountain_BG.png" type="Texture" id=2]
[ext_resource path="res://assets/levels/seasonal tilesets/winter world/Background/2 - Smaller_mountains.png" type="Texture" id=3]
[ext_resource path="res://assets/levels/seasonal tilesets/winter world/Background/1 - Snowy_foreground_area.png" type="Texture" id=4]
[ext_resource path="res://scenes/characters/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/ui/Hud.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/objects/TrapSpike.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/objects/MovingPlatform.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/objects/EndPoint.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/objects/Checkpoint.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/levels/L1-1TheBegining.gd" type="Script" id=11]
[ext_resource path="res://scenes/characters/NpcBasserby.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/characters/NpcShopkeeper.tscn" type="PackedScene" id=13]
[ext_resource path="res://assets/ui/icon.png" type="Texture" id=14]
[ext_resource path="res://scenes/vfx/GodRays.gdshader" type="Shader" id=15]
[ext_resource path="res://scenes/gameplay/DayCycle.tscn" type="PackedScene" id=16]
[ext_resource path="res://assets/vfx/light_1.png" type="Texture" id=17]
[ext_resource path="res://scenes/objects/Crate.tscn" type="PackedScene" id=20]
[ext_resource path="res://scenes/objects/TrapFallingPlatform.tscn" type="PackedScene" id=21]
[ext_resource path="res://assets/levels/level.ldtk" type="PackedScene" id=22]

[sub_resource type="Animation" id=8]
resource_name = "New Anim"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 224, 77 ), Vector2( 224, 50 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 66, -4 ) ]
}

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 15 )
shader_param/angle = -0.3
shader_param/position = -0.2
shader_param/spread = 0.565
shader_param/cutoff = 0.23
shader_param/falloff = 0.22
shader_param/edge_fade = 0.144
shader_param/speed = 4.0
shader_param/ray1_density = 8.0
shader_param/ray2_density = 30.0
shader_param/ray2_intensity = 0.319
shader_param/color = Color( 1, 0.9, 0.65, 0.8 )
shader_param/hdr = false
shader_param/seed = 5.0

[node name="Level0" type="Node2D"]
pause_mode = 1
script = ExtResource( 11 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Hud" parent="CanvasLayer" instance=ExtResource( 6 )]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="DayCycle2" parent="ParallaxBackground" instance=ExtResource( 16 )]
day_duration = 10.0

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0, 0 )
motion_mirroring = Vector2( 288, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 2 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.5, 0 )
motion_mirroring = Vector2( 288, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
texture = ExtResource( 3 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.6, 0 )
motion_mirroring = Vector2( 288, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
texture = ExtResource( 4 )

[node name="FixedBack" type="Node2D" parent="."]

[node name="level" parent="FixedBack" instance=ExtResource( 22 )]

[node name="StaticBody2D" type="StaticBody2D" parent="FixedBack"]
collision_layer = 3

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="FixedBack/StaticBody2D"]
polygon = PoolVector2Array( 0, 80, 0, 128, 416, 128, 416, 64, 352, 64, 352, 48, 240, 48, 240, 80 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="FixedBack/StaticBody2D"]
polygon = PoolVector2Array( 160, 64, 160, 80, 208, 80, 208, 64 )
one_way_collision = true

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="FixedBack/StaticBody2D"]
position = Vector2( -44, 0 )
polygon = PoolVector2Array( 160, 71, 160, 80, 200, 80, 200, 71 )
one_way_collision = true

[node name="MovingPlatform" parent="FixedBack" instance=ExtResource( 8 )]
position = Vector2( 66, -4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="FixedBack/MovingPlatform"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 8 )
anims/RESET = SubResource( 9 )

[node name="EndPoint" parent="FixedBack" instance=ExtResource( 9 )]
position = Vector2( 403, 64 )

[node name="NpcBasserby" parent="FixedBack" instance=ExtResource( 12 )]
position = Vector2( 339, 40 )

[node name="NpcShopkeeper" parent="FixedBack" instance=ExtResource( 13 )]
position = Vector2( 247, 41 )

[node name="Crate" parent="FixedBack" instance=ExtResource( 20 )]
position = Vector2( 275, 48 )

[node name="TrapSpike" parent="FixedBack" instance=ExtResource( 7 )]
position = Vector2( 318, 48 )

[node name="StartPoint" type="Position2D" parent="FixedBack"]
position = Vector2( 32, 80 )

[node name="TrapFallingPlatform" parent="FixedBack" instance=ExtResource( 21 )]
position = Vector2( 369, 54 )

[node name="Dynamic" type="Node2D" parent="."]

[node name="Checkpoint" parent="Dynamic" instance=ExtResource( 10 )]
position = Vector2( 199, 59 )
collision_layer = 2
collision_mask = 2

[node name="MainCamera" parent="Dynamic" instance=ExtResource( 1 )]
zoom = Vector2( 0.25, 0.25 )
drag_margin_top = 0.4
drag_margin_bottom = 0.4
follow_target_path = NodePath("../Player")

[node name="Player" parent="Dynamic" instance=ExtResource( 5 )]
position = Vector2( 65, 74 )

[node name="Light2D" type="Light2D" parent="Dynamic/Player"]
position = Vector2( 0, -12 )
texture = ExtResource( 17 )
texture_scale = 0.32
color = Color( 1, 0.980392, 0.592157, 1 )

[node name="FixedFront" type="Node2D" parent="."]

[node name="GodRays" type="Sprite" parent="FixedFront"]
visible = false
material = SubResource( 5 )
position = Vector2( 243, -4 )
scale = Vector2( 1.44141, 1.69141 )
texture = ExtResource( 14 )

[node name="DayCycle" parent="." instance=ExtResource( 16 )]
day_duration = 10.0

[connection signal="when_respawned" from="Dynamic/Player" to="." method="_on_Player_when_respawned"]
